--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<div class="container">
 
 		<div class="top-panel">
-			<img src="/img/logo.svg" alt="Logotype" class="top-logo">
+			<img src="img/logo.svg" alt="Logotype" class="top-logo">
 			<nav class="top-nav">
 				<ul>
 					<li><a href="#courses" class="scrollto">Courses </a></li>
@@ -61,7 +61,7 @@
 			</div>
 			<div class="header-main__img">
 				<div class="screen">
-					<img src="/img/screens.png" alt="screens" class="screen__img">
+					<img src="img/screens.png" alt="screens" class="screen__img">
 				</div>
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Private Label" data-name="Abcd">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Abcd</p>
@@ -128,18 +128,18 @@
 							</div>
 							<div class="table__col table__col--marketplace">
 								<div class="flags">
-									<img src="/img/flags/china.jpg" alt="China" title="China">
-									<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-									<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-									<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-									<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-									<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+									<img src="img/flags/china.jpg" alt="China" title="China">
+									<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+									<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
 							<div class="modal">
 								<div class="modal__wrap">
 									<div class="modal__thumb">
-										<img src="/img/thumb-modal.jpg" alt="thumb">
+										<img src="img/thumb-modal.jpg" alt="thumb">
 									</div>
 									<div class="modal__content">
 										<p class="modal__title">Resource Name</p>
@@ -159,12 +159,12 @@
 										<div class="modal__param">
 											<span>Marketplace:</span>
 											<div class="flags">
-												<img src="/img/flags/china.jpg" alt="China" title="China">
-												<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-												<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-												<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-												<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-												<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+												<img src="img/flags/china.jpg" alt="China" title="China">
+												<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+												<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+												<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+												<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+												<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 											</div>
 										</div>
 									</div>
@@ -175,7 +175,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Retail Arbitrage" data-name="Bcdf">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Bcdf</p>
@@ -196,12 +196,12 @@
 							</div>
 							<div class="table__col table__col--marketplace">
 								<div class="flags">
-									<img src="/img/flags/china.jpg" alt="China" title="China">
-									<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-									<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-									<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-									<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-									<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+									<img src="img/flags/china.jpg" alt="China" title="China">
+									<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+									<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
 						</div>
@@ -209,7 +209,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Retail Arbitrage" data-name="Frgh">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Frgh</p>
@@ -230,12 +230,12 @@
 							</div>
 							<div class="table__col table__col--marketplace">
 								<div class="flags">
-									<img src="/img/flags/china.jpg" alt="China" title="China">
-									<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-									<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-									<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-									<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-									<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+									<img src="img/flags/china.jpg" alt="China" title="China">
+									<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+									<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
 						</div>
@@ -243,7 +243,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Private Label">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Resource Name Private Label</p>
@@ -264,12 +264,12 @@
 							</div>
 							<div class="table__col table__col--marketplace">
 								<div class="flags">
-									<img src="/img/flags/china.jpg" alt="China" title="China">
-									<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-									<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-									<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-									<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-									<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+									<img src="img/flags/china.jpg" alt="China" title="China">
+									<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+									<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
 						</div>
@@ -277,7 +277,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Retail Arbitrage">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Resource Name Retail Arbitrage</p>
@@ -298,12 +298,12 @@
 							</div>
 							<div class="table__col table__col--marketplace">
 								<div class="flags">
-									<img src="/img/flags/china.jpg" alt="China" title="China">
-									<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-									<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-									<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-									<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-									<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+									<img src="img/flags/china.jpg" alt="China" title="China">
+									<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+									<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
 						</div>
@@ -311,7 +311,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Retail Arbitrage">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Resource Name Retail Arbitrage</p>
@@ -332,12 +332,12 @@
 							</div>
 							<div class="table__col table__col--marketplace">
 								<div class="flags">
-									<img src="/img/flags/china.jpg" alt="China" title="China">
-									<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-									<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-									<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-									<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-									<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+									<img src="img/flags/china.jpg" alt="China" title="China">
+									<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+									<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
 						</div>
@@ -345,7 +345,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Wholesale">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Resource Name Wholesale</p>
@@ -366,12 +366,12 @@
 							</div>
 							<div class="table__col table__col--marketplace">
 								<div class="flags">
-									<img src="/img/flags/china.jpg" alt="China" title="China">
-									<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-									<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-									<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-									<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-									<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+									<img src="img/flags/china.jpg" alt="China" title="China">
+									<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+									<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
 						</div>
@@ -379,7 +379,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Private Label">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Resource Name Private Label</p>
@@ -400,12 +400,12 @@
 							</div>
 							<div class="table__col table__col--marketplace">
 								<div class="flags">
-									<img src="/img/flags/china.jpg" alt="China" title="China">
-									<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-									<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-									<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-									<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-									<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+									<img src="img/flags/china.jpg" alt="China" title="China">
+									<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+									<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
 						</div>
@@ -413,7 +413,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Retail Arbitrage">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Resource Name Retail Arbitrage</p>
@@ -434,12 +434,12 @@
 							</div>
 							<div class="table__col table__col--marketplace">
 								<div class="flags">
-									<img src="/img/flags/china.jpg" alt="China" title="China">
-									<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-									<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-									<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-									<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-									<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+									<img src="img/flags/china.jpg" alt="China" title="China">
+									<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+									<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
 						</div>
@@ -447,7 +447,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Retail Arbitrage">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Resource Name Retail Arbitrage</p>
@@ -468,12 +468,12 @@
 							</div>
 							<div class="table__col table__col--marketplace">
 								<div class="flags">
-									<img src="/img/flags/china.jpg" alt="China" title="China">
-									<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-									<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-									<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-									<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-									<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+									<img src="img/flags/china.jpg" alt="China" title="China">
+									<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+									<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
 						</div>
@@ -481,7 +481,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Wholesale">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Resource Name Wholesale</p>
@@ -502,12 +502,12 @@
 							</div>
 							<div class="table__col table__col--marketplace">
 								<div class="flags">
-									<img src="/img/flags/china.jpg" alt="China" title="China">
-									<img src="/img/flags/greece.jpg" alt="Greece" title="Greece">
-									<img src="/img/flags/spain.jpg" alt="Spain" title="Spain">
-									<img src="/img/flags/sweden.jpg" alt="Sweden" title="Sweden">
-									<img src="/img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
-									<img src="/img/flags/russia.jpg" alt="Russia" title="Russia">
+									<img src="img/flags/china.jpg" alt="China" title="China">
+									<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+									<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
 						</div>
@@ -562,7 +562,7 @@
 						<!--item-->
 						<div class="table-item" data-cat="Product research">
 							<div class="table__col table__col--first">
-								<img src="/img/thumb.jpg" alt="thumb" class="table-item__thumb">
+								<img src="img/thumb.jpg" alt="thumb" class="table-item__thumb">
 							</div>
 							<div class="table__col table__col--name">
 								<p class="h3">Product research</p>
@@ -582,7 +582,7 @@
 							<div class="modal">
 								<div class="modal__wrap">
 									<div class="modal__thumb">
-										<img src="/img/thumb-modal.jpg" alt="thumb">
+										<img src="img/thumb-modal.jpg" alt="thumb">
 									</div>
 									<div class="modal__content">
 										<p class="modal__title">Resource Name</p>
