--- a/index.html
+++ b/index.html
@@ -189,6 +189,40 @@
 									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
 								</div>
 							</div>
+							<div class="modal">
+								<div class="modal__wrap">
+									<div class="modal__thumb">
+										<img src="img/thumb-modal.jpg" alt="thumb">
+									</div>
+									<div class="modal__content">
+										<p class="modal__title">Resource Name</p>
+										<div class="stars">
+											<i class="i-star i-star--full"></i>
+											<i class="i-star i-star--full"></i>
+											<i class="i-star i-star--full"></i>
+											<i class="i-star"></i>
+											<i class="i-star"></i>
+										</div>
+										<p class="modal__type">Type of the Resource</p>
+										<p class="modal__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectet</p>
+										<div class="modal__param">
+											<span>Languages:</span>
+											<div>English, Chinesse, Franch, Russian</div>
+										</div>
+										<div class="modal__param">
+											<span>Marketplace:</span>
+											<div class="flags">
+												<img src="img/flags/china.jpg" alt="China" title="China">
+												<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+												<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+												<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+												<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+												<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 						<!--item end-->
 						<!--item-->
@@ -221,6 +255,40 @@
 									<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
 									<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
 									<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
+								</div>
+							</div>
+							<div class="modal">
+								<div class="modal__wrap">
+									<div class="modal__thumb">
+										<img src="img/thumb-modal.jpg" alt="thumb">
+									</div>
+									<div class="modal__content">
+										<p class="modal__title">Resource Name</p>
+										<div class="stars">
+											<i class="i-star i-star--full"></i>
+											<i class="i-star i-star--full"></i>
+											<i class="i-star i-star--full"></i>
+											<i class="i-star"></i>
+											<i class="i-star"></i>
+										</div>
+										<p class="modal__type">Type of the Resource</p>
+										<p class="modal__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectet</p>
+										<div class="modal__param">
+											<span>Languages:</span>
+											<div>English, Chinesse, Franch, Russian</div>
+										</div>
+										<div class="modal__param">
+											<span>Marketplace:</span>
+											<div class="flags">
+												<img src="img/flags/china.jpg" alt="China" title="China">
+												<img src="img/flags/greece.jpg" alt="Greece" title="Greece">
+												<img src="img/flags/spain.jpg" alt="Spain" title="Spain">
+												<img src="img/flags/sweden.jpg" alt="Sweden" title="Sweden">
+												<img src="img/flags/united-kingdom.jpg" alt="United-kingdom" title="United-kingdom">
+												<img src="img/flags/russia.jpg" alt="Russia" title="Russia">
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
